--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Varela Round";
+  font-family: 'Open Sans', sans-serif;
 }
 
 :root {
@@ -26,12 +26,19 @@ p,
 a {
   color: var(--whiteColor);
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+  font-family: 'Raleway', sans-serif;
+}
 
 p {
   font-size: 14px;
   line-height: 1.5;
   letter-spacing: 1.3px;
-  font-family: "Comfortaa";
 }
 
 a {
